add empty src files

--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
   "version": "0.0.1",
   "description": "saulo.dev related projects",
   "author": "sauloxd <hello@saulo.dev>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
