--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -8,7 +8,17 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "gatsby": "^2.18.17",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
   "devDependencies": {
-    "gatsby-cli": "^2.8.22"
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
+    "eslint": "^6.8.0",
+    "eslint-config-sxd": "^1.0.1",
+    "gatsby-cli": "^2.8.22",
+    "typescript": "^3.7.4"
   }
 }
