--- a/packages/blog/tsconfig.json
+++ b/packages/blog/tsconfig.json
@@ -10,6 +10,7 @@
     "lib": ["es2017", "esnext", "dom"],
     "types": ["react"]
   },
+  "include": ["src/**/*"],
   "exclude": [
     "node_modules"
   ]
