--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -13,12 +13,17 @@
   "dependencies": {
     "@webshine/ui": "1.0.0",
     "gatsby": "^2.18.17",
+    "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-typescript": "^2.1.23",
+    "gatsby-source-filesystem": "^2.1.43",
+    "gatsby-transformer-remark": "^2.6.45",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
+    "@types/react-helmet": "^5.0.14",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.13.0",
     "eslint": "^6.8.0",
