--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "gatsby develop",
+    "b": "gatsby build",
     "el": "eslint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,15 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "@webshine/ui": "1.0.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.18.17",
     "gatsby-plugin-react-helmet": "^3.1.18",
+    "gatsby-plugin-styled-components": "^3.1.17",
     "gatsby-plugin-typescript": "^2.1.23",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-remark": "^2.6.45",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.4.1"
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "@types/react-helmet": "^5.0.14",
