for now test iis linting only

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "echo 'no tests here'",
+    "test": "yarn lint",
     "lint": "yarn workspaces run lint"
   },
   "name": "saulo.dev",
