--- a/packages/blog/tsconfig.json
+++ b/packages/blog/tsconfig.json
@@ -13,7 +13,7 @@
     "lib": ["es2017", "esnext", "dom"],
     "types": ["react"],
   },
-  "include": ["src/**/*", "../../node_modules/@webshine/ui/src/**/*"],
+  "include": ["src/**/*", "../../node_modules/@saulo.dev/ui/src/**/*"],
   "exclude": [
     "node_modules"
   ]
