--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@shine/blog",
+  "name": "@saulo.dev/blog",
   "version": "1.0.0",
   "description": "My blog :)",
   "main": "index.js",
@@ -7,14 +7,14 @@
     "dev": "gatsby develop",
     "build": "gatsby build",
     "lint": "npx concurrently --kill-others-on-fail \"yarn lint:js\" \"yarn lint:ts\"",
-    "lint:js": "echo \"lint:js [$(eslint --version)] => @shine/blog\" && eslint --cache --ext .js,.ts,.tsx .",
-    "lint:ts": "echo \"lint:ts $(tsc --version) => @shine/blog\" && tsc -p ./tsconfig.json",
+    "lint:js": "echo \"lint:js [$(eslint --version)] => @saulo.dev/blog\" && eslint --cache --ext .js,.ts,.tsx .",
+    "lint:ts": "echo \"lint:ts $(tsc --version) => @saulo.dev/blog\" && tsc -p ./tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@webshine/ui": "1.0.0",
+    "@saulo.dev/ui": "1.0.0",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.18.17",
     "gatsby-plugin-react-helmet": "^3.1.18",
