update cicle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,36 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
+      - image: circleci/node:12.14.1 # the primary container, where your job's commands are run
     steps:
-      - checkout # check out the code in the project directory
-      - run: echo "hello world" # run the `echo` command
+      - checkout
+      - save_cache: # Caches dependencies with a cache key
+      - restore_cache: # special step to restore the dependency cache
+          # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
+          key: dependency-cache-{{ checksum "yarn.lock" }}
+      - run:
+          name: yarn installing things
+          command: yarn install
+      - save_cache: # Caches dependencies with a cache key
+      # template for an environment variable,
+      # see circleci.com/docs/2.0/caching/
+          key: dependency-cache-{{ checksum "yarn.lock" }}
+      - run: # run tests
+          name: test
+          command: yarn lint
+#   lint:
+#     docker:
+#       - image: circleci/node:12.14.1
+#     steps:
+#       - restore_cache: # Restores the cached dependency.
+#           key: v1-repo-{{ .Environment.CIRCLE_SHA1 }}
+#       - run:
+#           name: Running lint
+#           command: yarn lint
+
+# workflows:
+#   version: 2
+#   lint:
+#     jobs:
+#       - build
+#       - lint
