--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 version: 2.1
 jobs:
   build:
+    working_directory: ~/saulo.dev
     docker:
       - image: circleci/node:12.14.1 # the primary container, where your job's commands are run
     steps:
       - checkout
-      - save_cache: # Caches dependencies with a cache key
       - restore_cache: # special step to restore the dependency cache
           # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
           key: dependency-cache-{{ checksum "yarn.lock" }}
