--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
       # template for an environment variable,
       # see circleci.com/docs/2.0/caching/
           key: dependency-cache-{{ checksum "yarn.lock" }}
-      - run: # run tests
-          name: test
-          command: yarn lint
+      # - run: # run tests
+      #     name: test
+      #     command: yarn lint
 #   lint:
 #     docker:
 #       - image: circleci/node:12.14.1
