--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,7 @@ workflows:
   version: 2
   build_and_test:
     jobs:
+      - install_deps
       - build:
           requires:
             - install_deps
