use working_directory otherwise it uses project default name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2.1
+
 jobs:
   install_deps:
+    working_directory: saulo.dev
     docker:
       - image: circleci/node:12.14.1 # the primary container, where your job's commands are run
     steps:
@@ -18,6 +20,7 @@ jobs:
 
   # how to add correct env vars?
   build:
+    working_directory: saulo.dev
     docker:
       - image: circleci/node:12.14.1
     steps:
@@ -30,6 +33,7 @@ jobs:
           command: yarn blog:build
 
   lint:
+    working_directory: saulo.dev
     docker:
       - image: circleci/node:12.14.1
     steps:
@@ -39,9 +43,10 @@ jobs:
           key: dependency-cache-{{ checksum "yarn.lock" }}
       - run:
           name: lint js + ts
-          command: yarn blog:lint
+          command: yarn lint
 
   deploy:
+    working_directory: saulo.dev
     docker:
       - image: circleci/node:12.14.1
     steps:
