--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,10 @@ jobs:
       - run: # run tests
           name: build stuff
           command: yarn blog:build
-
+      - save_cache:
+          key: build-{{ checksum "yarn.lock" }}
+          paths:
+            - ./packages/blog/public
   lint:
     working_directory: ~/saulo.dev
     docker:
@@ -53,6 +56,8 @@ jobs:
       BUCKET_NAME: saulo.dev
       BUCKET_REGION: us-east-1
     steps:
+      - restore_cache:
+          key: build-{{ checksum "yarn.lock" }}
       - run:
           name: Deploy to s3!
           command: aws s3 sync packages/blog/public s3://$BUCKET_NAME --region=$BUCKET_REGION --delete
@@ -71,7 +76,7 @@ jobs:
 
 workflows:
   version: 2
-  build_and_test:
+  test_build_and_deploy:
     jobs:
       - install_deps
       - build:
