--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "name": "saulo.dev",
   "version": "0.0.1",
-  "description": "saulo.dev related projects",
+  "description": "saulo.dev related projects :)",
   "author": "sauloxd <hello@saulo.dev>",
   "license": "MIT",
   "dependencies": {}
