--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -17,6 +17,7 @@
     "@saulo.dev/ui": "1.0.0",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.18.17",
+    "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-styled-components": "^3.1.17",
     "gatsby-plugin-typescript": "^2.1.23",
