--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -25,16 +25,17 @@
     "gatsby-transformer-remark": "^2.6.45",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
+    "react-helmet": "^6.1.0",
     "rimraf": "^3.0.2",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
-    "@types/react-helmet": "^5.0.14",
-    "@typescript-eslint/eslint-plugin": "^2.13.0",
-    "@typescript-eslint/parser": "^2.13.0",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "concurrently": "^5.0.2",
-    "eslint": "^6.8.0",
+    "eslint": "^7.7.0",
     "eslint-config-sxd": "1.0.4",
     "gatsby-cli": "^2.8.22",
     "gatsby-plugin-graphql-codegen": "^2.1.1",
