--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,14 +5,15 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.7.7",
-    "@storybook/react": "^5.2.8",
+    "@storybook/react": "^6.0.12",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.2",
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
+    "babel-preset-react-app": "^9.1.2",
     "concurrently": "^5.0.2",
     "dotenv": "^8.2.0",
-    "eslint-config-sxd": "^1.0.4",
+    "eslint-config-sxd": "^1.0.5",
     "typescript": "^3.7.4"
   },
   "scripts": {
@@ -22,7 +23,7 @@
     "lint:ts": "echo \"lint:ts $(tsc --version) => @saulo.dev/ui\" && tsc -p ./tsconfig.json"
   },
   "dependencies": {
-    "@storybook/cli": "^5.2.8",
+    "@storybook/cli": "^6.0.12",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^5.0.0"
