--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -32,13 +32,9 @@
   "devDependencies": {
     "@types/react-dom": "^16.9.8",
     "@types/react-helmet": "^6.1.0",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
     "concurrently": "^5.0.2",
-    "eslint": "^7.7.0",
     "eslint-config-sxd": "1.0.5",
     "gatsby-cli": "^2.8.22",
-    "gatsby-plugin-graphql-codegen": "^2.1.1",
-    "typescript": "^3.7.4"
+    "gatsby-plugin-graphql-codegen": "^2.1.1"
   }
 }
