--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           key: dependency-cache-2-{{ checksum "yarn.lock" }}
       - run:
           name: yarn installing things
-      -    command: yarn install
+          command: yarn install
       - save_cache:
           key: dependency-cache-2-{{ checksum "yarn.lock" }}
           paths:
