--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,10 +68,20 @@ jobs:
       - run:
           name: Deploy to s3!
           command: sh scripts/s3-deploy.sh
-
+  ping:
+    docker:
+      - image: cimg/base:2020.01
+    resource_class: small
+    steps:
+      - run:
+          name: "This job exists only so CircleCI doesn't trigger errors when no workflow runs"
+          command: "echo OK"
 workflows:
   version: 2
   test_build_and_deploy:
+    when:
+      not:
+        equal: [ develop, << pipeline.git.branch >> ]
     jobs:
       - install_deps
       - build:
@@ -87,3 +97,13 @@ workflows:
           filters:
              branches:
                only: master
+  ping:
+    triggers:
+      - schedule:
+          cron: "0 0 * * *"
+          filters:
+            branches:
+              only:
+                - this-fixes-the-no-workflow-error-in-circle-ci
+    jobs:
+      - ping
