--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,14 @@ jobs:
       - uses: actions/checkout@v2
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
+        run: echo "::set-output name=dir::$(yarn cache dir)"
       - uses: actions/cache@v2
         id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-yarn-v1-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-yarn-
+            ${{ runner.os }}-yarn-v1-
       - name: Install deps checking cache hit
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile
@@ -25,12 +25,14 @@ jobs:
           echo $GITHUB_CONTEXT
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v2
+
       - name: Build your app
         run: yarn workspace @saulo.dev/ui run build:sb
+
       - name: Review app static apps
         uses: sauloxd/stories@v1.0.9
         with:
           public-assets-dir: 'packages/ui/storybook-static'
           output-dir: 'storybooks'
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v2
