--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Build your app
         run: yarn workspace @saulo.dev/ui run build:sb
       - name: Review app static apps
-        uses: sauloxd/stories@v1.1.9
+        uses: sauloxd/stories@v1.1.11
         with:
           public-assets-dir: 'packages/ui/storybook-static'
           output-dir: 'storybooks'
-      # - name: Setup tmate session
-      #   uses: mxschmitt/action-tmate@v2
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v2
