--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
+        if: github.event.action != 'delete'
       - uses: actions/cache@v2
         id: yarn-cache
         with:
@@ -22,12 +23,15 @@ jobs:
           key: ${{ runner.os }}-yarn-v1-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-v1-
+        if: github.event.action != 'delete'
       - name: Install deps checking cache hit
         run: yarn install --frozen-lockfile
+        if: github.event.action != 'delete'
       - name: Build your app
         run: yarn workspace @saulo.dev/ui run build:sb
+        if: github.event.action != 'delete'
       - name: Review app static apps
-        uses: sauloxd/stories@v1.1.30
+        uses: sauloxd/stories@v1.2.0
         with:
           public-assets-dir: 'packages/ui/storybook-static'
           output-dir: 'storybooks'
