only deploy when build succeeds

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,6 +94,9 @@ workflows:
           requires:
             - build
             - lint
+          filters:
+             branches:
+               only: master
   ping:
     triggers:
       - schedule:
