add blog to be build too

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
-        if: github.event.action != 'delete'
+        if: github.event.action != 'closed'
       - uses: actions/cache@v2
         id: yarn-cache
         with:
@@ -23,17 +23,25 @@ jobs:
           key: ${{ runner.os }}-yarn-v1-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-v1-
-        if: github.event.action != 'delete'
+        if: github.event.action != 'closed'
       - name: Install deps checking cache hit
         run: yarn install --frozen-lockfile
-        if: github.event.action != 'delete'
-      - name: Build your app
+        if: github.event.action != 'closed'
+      - name: Build Storybook
         run: yarn workspace @saulo.dev/ui run build:sb
-        if: github.event.action != 'delete'
+        if: github.event.action != 'closed'
       - name: Review app static apps
-        uses: sauloxd/stories@v1.2.0
+        uses: sauloxd/stories@v1.2.1
         with:
           public-assets-dir: 'packages/ui/storybook-static'
           output-dir: 'storybooks'
+      - name: Build Main app
+        run: yarn workspace @saulo.dev/blog run blog:build
+        if: github.event.action != 'closed'
+      - name: Review app static apps
+        uses: sauloxd/stories@v1.2.1
+        with:
+          public-assets-dir: 'packages/blog/public'
+          output-dir: 'blog'
       # - name: Setup tmate session
       #   uses: mxschmitt/action-tmate@v2
