[skip ci] ref to dc777b8c8013b620ce524490144786988f2461d6

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "blog": {
+  "storybooks": {
     "apps": [
       {
         "name": "ft-4",
-        "headCommitId": "f55a06e39bd42fe12999e2e5091de504b0109a4d",
-        "updatedAt": "2020-08-30T01:07:33.537Z",
-        "href": "/saulo.dev/blog/ft-4-f55a06",
+        "headCommitId": "dc777b8c8013b620ce524490144786988f2461d6",
+        "updatedAt": "2020-08-30T01:22:43.362Z",
+        "href": "/saulo.dev/storybooks/ft-4-dc777b",
         "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/8"
       }
     ]
