[skip ci] ref to 2d1623fcaf94c3ff77e9a7a4eb24cccc4e464f08

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,1 @@
-{
-  "blog": {
-    "apps": [
-      {
-        "name": "ft-4",
-        "headCommitId": "dc777b8c8013b620ce524490144786988f2461d6",
-        "updatedAt": "2020-08-30T01:23:12.274Z",
-        "href": "/saulo.dev/blog/ft-4-dc777b",
-        "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/8"
-      }
-    ]
-  }
-}
+undefined
