[skip ci] ref to 6a5bdf881d18018489be8ad024589a20f84eaff7

--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,13 @@
-undefined
+{
+  "storybooks": {
+    "apps": [
+      {
+        "name": "ft-4",
+        "headCommitId": "6a5bdf881d18018489be8ad024589a20f84eaff7",
+        "updatedAt": "2020-08-30T01:32:39.490Z",
+        "href": "/saulo.dev/storybooks/ft-4-6a5bdf",
+        "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/8"
+      }
+    ]
+  }
+}
