--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,16 @@
         "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/8"
       }
     ]
+  },
+  "blog": {
+    "apps": [
+      {
+        "name": "ft-4",
+        "headCommitId": "6a5bdf881d18018489be8ad024589a20f84eaff7",
+        "updatedAt": "2020-08-30T01:33:07.994Z",
+        "href": "/saulo.dev/blog/ft-4-6a5bdf",
+        "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/8"
+      }
+    ]
   }
 }
