[skip ci] ref to 8b6243ade825d8d5f43b7e87c0402ee1943565df for - blog

--- a/manifest.json
+++ b/manifest.json
@@ -14,9 +14,9 @@
     "apps": [
       {
         "name": "ft-4",
-        "headCommitId": "6a5bdf881d18018489be8ad024589a20f84eaff7",
-        "updatedAt": "2020-08-30T01:33:07.994Z",
-        "href": "/saulo.dev/blog/ft-4-6a5bdf",
+        "headCommitId": "8b6243ade825d8d5f43b7e87c0402ee1943565df",
+        "updatedAt": "2020-08-30T01:57:27.098Z",
+        "href": "/saulo.dev/blog/ft-4/8b6243",
         "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/8"
       }
     ]
