[skip ci] ref to 86d5f39c02c22d27684b047a346fb8192a3de560 for - blog

--- a/manifest.json
+++ b/manifest.json
@@ -14,9 +14,9 @@
     "apps": [
       {
         "name": "ft-4",
-        "headCommitId": "8b6243ade825d8d5f43b7e87c0402ee1943565df",
-        "updatedAt": "2020-08-30T01:57:27.098Z",
-        "href": "/saulo.dev/blog/ft-4/8b6243",
+        "headCommitId": "86d5f39c02c22d27684b047a346fb8192a3de560",
+        "updatedAt": "2020-08-30T02:03:29.709Z",
+        "href": "/saulo.dev/blog/ft-4/86d5f3",
         "pullRequestUrl": "https://github.com/Sauloxd/saulo.dev/pull/8"
       }
     ]
